# KorEduBench

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  package-lock.json  pyproject.toml  requirements.txt  requirements_colab.txt
API_instructions/antropic/: claude_example.py  claude_instructions.md
API_instructions/google_ai_studio/: gemini_example.py  gemini_instructions.md
API_instructions/hugging_face/: huggingface_example.py  huggingface_instructions.md
API_instructions/openrouter/: openrouter_example.py  openrouter_instructions.md
cosine_similarity/: batch_cosine_similarity.py  eval_cosine_similarity.py  results.json  train_dual_encoder.py
cross_encoder/: eval_cross_encoder.py  finetune_cross_encoder.py  results_rerank.json
dataset/: add_text_to_standards.py  extract_standards.py  insufficient_text.csv  split_subject.py  unique_achievement_standards.csv
dataset/few_shot_examples/: 과학.json  국어.json  기술가정.json  도덕.json  사회.json  사회문화.json  수학.json  영어.json  정보.json
dataset/train_80/: 국어.csv  기술가정.csv  도덕.csv  사회.csv  사회문화.csv  수학.csv  영어.csv  정보.csv
dataset/valid_80/: 국어.csv  기술가정.csv  도덕.csv  사회.csv  사회문화.csv  수학.csv  영어.csv  정보.csv
doc/: CODE_ANALYSIS.md  PROJECT_STRUCTURE.md  SCRIPTS.md
docs/: CODE_ANALYSIS.md  PROJECT_STRUCTURE.md  SCRIPTS.md
output/agentic_llm_text_classification/: results_unsloth_Qwen2.5-7B-Instruct-bnb-4bit_2025-11-23_18-26.json  results_unsloth_Qwen2.5-7B-Instruct-bnb-4bit_2025-11-23_18-31.json
output/check_agentic_prompt_length/: results_15_200_True.csv
output/check_prompt_length/: results.csv  results_15_999_5.csv  results_20_200_5.csv  results_20_999_5.csv  results_30_200_5.csv  results_30_999_5.csv  results_999_200_5.csv
output/check_rag_prompt_length/: results_20_200_True.csv
scripts/: agentic_finetune_llm_text_classification.sh  agentic_finetuning_llm.sh  agentic_llm_text_classification.sh  api_agentic_llm_text_classification.sh  api_llm_text_classification.sh  api_rag_llm_text_classification.sh  best_classifier.sh  check_agentic_prompt_length.sh  check_prompt_length.sh  check_rag_prompt_length.sh  cosine_similarity.sh  cross_encoder.sh  error_analysis.sh  eval_classifier.sh  finetune_llm_text_classification.sh  finetuning_llm.sh  llm_text_classification.sh  predict_best_model.sh  preprocess.sh  rag_finetune_llm_text_classification.sh  rag_finetuning_llm.sh  rag_llm_text_classification.sh  train_advanced.sh  train_advanced_large.sh  train_classifier.sh  train_classifier_focal.sh  train_classifier_large.sh
src/: __init__.py
src/utils/: api_model.py  (+13 more)
(+217 files in other folders)
